# gl_playground

./: .gitattributes  .gitmodules  CMakeLists.txt  ExGLFWwindow.cpp  GLFW_FPS_Camera.cpp  glSkyBox_t.cpp  glTextureCubeMap_t.cpp  glTransform_t.cpp  gl_Texture2D_t.cpp  readme.md
cmake/: CPM.cmake  configure_third_party.cmake
dependences/glad/include/glad/: glad.h
dependences/glad/src/: glad.c
include/: AssimpMesh_t.h  AssimpModel_t.h  ExGLFWwindow.h  GLFW_FPS_Camera.h  UnCopyable.h  glBuffer_t.h  glFrameBuffer_t.h  glRenderBuffer_t.h  glShader_t.h  glSkyBox_t.h  glTexture2D_t.h  glTextureCubeMap_t.h  glTransform_t.h  glVertexArray_t.h
include/glpp/: buffer.h  common.h  draw.h  shader_program.h  texture.h  vertex_array.h
include/glpp/ui/: io_handler.h  ui_window.h
include/glpp/ui/preset/: fps_camera.h  fps_io.h
src/: CMakeLists.txt  ExGLFWwindow.cpp  GLFW_FPS_Camera.cpp  buffer.cc  glSkyBox_t.cpp  glTextureCubeMap_t.cpp  glTransform_t.cpp  gl_Texture2D_t.cpp  shader_program.cc  stb_stub.cc  texture.cc  vertex_array.cc
src/ui/: CMakeLists.txt  initializer.h  io_handler.cc  ui_window.cc
src/ui/preset/: CMakeLists.txt  fps_camera.cc  fps_io.cc
test/: 00_hello_window.cc  01_hello_triangle.cc  02_hello_camera.cc  03_hello_texture.cc  CMakeLists.txt  hello_triangle.cc  hello_triangle.cpp  hello_triangle_instance.cpp  hello_window.cc  simple_window.cpp  test_resource.h.in
test/simple_assimp/: simple_assimp.cpp  simple_assimp.vert
test/simple_frame_buffer/: simple_frame_buffer.cpp
test/simple_light/: container.frag  container.vert  cube_point_data.h  light.frag  light.vert  simple_light.cpp
test/simple_skybox/: skybox.cpp
test/texture/: texture.cpp  triangle_with_texture.vert
test/transform_3d/: cube_point_data.h  cube_with_texture.frag  cube_with_texture.vert  transform3d.cpp
test/transfrom_2d/: square_with_texture.vert  transfrom2d.cpp
